[package]
name = "nrp-2"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "2.9.1", features = ["json"] }
fantoccini = "0.21"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.0"
scraper = "0.21"
clap = { version = "4.4.11", features = ["derive"] }
html2md = "0.2.14"
regex = "1.9.5"
base64 = "0.22"
sha2 = "0.10.8"

[dev-dependencies]
tokio-test = "0.4"
